# agentready

./: .gitignore  README.md
apps/api/: .env.example  package-lock.json  package.json
apps/api/api/: contextforge.ts  narrate.ts  review.ts
apps/desktop/: DEVELOPMENT.md  index.html  package-lock.json  package.json  vite.config.ts
apps/desktop/src/: App.tsx  styles.css
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: auth.rs  contextforge.rs  engine.rs  lib.rs  main.rs  models.rs  narrate.rs  pro_review.rs  settings.rs  storage.rs
apps/desktop/src/components/: AppSidebar.tsx  VerdictBadge.tsx
apps/desktop/src/lib/: appSettings.ts  auth.ts  contextforge.ts  featureSpec.ts  git.ts  narrate.ts  readiness.ts  recentProjects.ts  storage.ts
apps/desktop/src/mocks/: readinessReport.ts
apps/desktop/src/types/: engine.ts  index.ts
apps/mcp/: package-lock.json  package.json
apps/mcp/scripts/: bake-constants.mjs
apps/mcp/src/: engine.ts  format.ts  index.ts  proReview.ts  storage.ts  types.ts
apps/web/: middleware.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/components/: UpgradeButton.tsx
apps/web/lib/: supabase.ts
docs/: architecture.md  free-v1-scope.md  release-v1.1-checklist.md
docs/schemas/: current-session.schema.json  feature-spec.schema.json  readiness-report.schema.json
engine/: pom.xml
(+83 files in other folders)
