[package]
name = "agentready-desktop"
version = "0.1.0"
description = "AgentReady desktop shell"
authors = ["AgentReady"]
edition = "2021"

[lib]
name = "agentready_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-deep-link = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["clock"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["rt", "net", "io-util", "time"] }
url = "2"
keyring = "3"
